--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" style="background-color: rgb(255,255,255);" href="">Minimum Wage</a>
+            <a class="navbar-brand" style="background-color: rgb(255,255,255);" href="index.html">Minimum Wage</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
