added grid object for minimum wage text

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,15 @@
     </div>
     <div class="container">
         <div class="row">
+            <div class="col-sm-12" id="summary">
+                <h1>Minimum Wage</h1>
+                <div class="row">
+                    <h3>A minimum wage is the lowest remuneration that employers can legally pay their employees. Minimum wage legislation emerged at the end of 
+                        the nineteenth century from the desire to end sweated labor (sweatshops) which had developed in the wake of industrialization. In the United States, 
+                        different states are able to set their own minimum wages independent of the federal government. When the state and federal minimum wage differ the higher wage prevails.
+                    </h3>
+                </div>
+            </div>
             <div class="col-lg-7 col-md-12">
                 <div class="box" style="padding-bottom: 20px;">
                     <h3 class="title"> <br> </h3>
