--- a/static/styles.css
+++ b/static/styles.css
@@ -100,6 +100,10 @@ body {
   width: 100%;
   padding-top: 15px;
   }
+
+  #summary {
+    text-align: center;
+  }
   
   @media(max-width: 992px) {
     .navbar-expand-lg {
