changed background color in style.css

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://ak.picdn.net/shutterstock/videos/24223843/thumb/1.jpg");
+    background-image: grey;
     height: 750px;
     background-position: center;
     background-repeat: repeat;
