changed background color

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: grey;
+    background-color: #cccccc;
     height: 750px;
     background-position: center;
     background-repeat: repeat;
