--- a/templates/index.html
+++ b/templates/index.html
@@ -43,49 +43,35 @@
                     </h3>
                 </div>
             </div>
-            <div class="col-lg-7 col-md-12">
+        <div class="row">
+            <div class="col-md-6">
                 <div class="box" style="padding-bottom: 20px;">
                     <h3 class="title"> <br> </h3>
                     <hr>
                     <img src="" class="vizualization rounded float-left" alt="">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="box" style="padding-bottom: 20px;">
+                    <h3 class="title"> <br> </h3>
+                    <hr>
+                    <img src="" class="vizualization rounded float-left" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="box" style="padding-bottom: 20px;">
+                    <h1>Living Wage</h1>
+                    <h3></h3>
                     
                 </div>
             </div>
-            <div class="col-lg-5 col-md-12">
-                <div class="box">
-                    <h3 class="title"></h3>
+            <div class="col-md-6">
+                <div class="box" style="padding-bottom: 20px;">
+                    <h3 class="title"> <br> </h3>
                     <hr>
-                    <div class="container">
-                        <div class="row" style="padding-bottom: 70px;">
-                            <div class="col-6">
-                                <div class="title"></div>
-                                <a href="">
-                                <img class="panel" src="" alt="">
-                                </a>
-                            </div>
-                            <div class="col-6">
-                                <div class="title"></div>
-                                <a href="">
-                                <img class="panel" src="" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="row" style="padding-bottom: 70px;">
-                            <div class="col-6">
-                                <div class="title"></div>
-                                <a href="">
-                                <img class="panel" src="" alt="">
-                                </a>
-                                <!-- <div class="title">vs. Cloudiness</div> -->
-                            </div>
-                            <div class="col-6">
-                                <div class="title"></div>
-                                <a href="">
-                                    <img class="panel" src="" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                    <img src="" class="vizualization rounded float-left" alt="">
                 </div>
             </div>
         </div>
