fixed grid layout

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,35 +44,22 @@
                 </div>
             </div>
         <div class="row">
-            <div class="col-md-6">
-                <div class="box" style="padding-bottom: 20px;">
-                    <h3 class="title"> <br> </h3>
-                    <hr>
-                    <img src="" class="vizualization rounded float-left" alt="">
-                </div>
+            <div class="col-md-6" id="line">
+                
             </div>
-            <div class="col-md-6">
-                <div class="box" style="padding-bottom: 20px;">
-                    <h3 class="title"> <br> </h3>
-                    <hr>
-                    <img src="" class="vizualization rounded float-left" alt="">
-                </div>
+            <div class="col-md-6" id="bubble">
+                
             </div>
         </div>
         <div class="row">
             <div class="col-lg-6">
-                <div class="box" style="padding-bottom: 20px;">
-                    <h1>Living Wage</h1>
+                <h1>Living Wage</h1>
+                <div class="row">
                     <h3></h3>
-                    
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="box" style="padding-bottom: 20px;">
-                    <h3 class="title"> <br> </h3>
-                    <hr>
-                    <img src="" class="vizualization rounded float-left" alt="">
-                </div>
+            <div class="col-md-6" id="hex">
+                
             </div>
         </div>
     </div>
