--- a/templates/index.html
+++ b/templates/index.html
@@ -45,21 +45,21 @@
             </div>
         <div class="row">
             <div class="col-md-6" id="line">
-                
+                <h1>line</h1>
             </div>
             <div class="col-md-6" id="bubble">
-                
+                <h1>bubble</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-md-6">
                 <h1>Living Wage</h1>
                 <div class="row">
                     <h3></h3>
                 </div>
             </div>
             <div class="col-md-6" id="hex">
-                
+                <h1>hex</h1>
             </div>
         </div>
     </div>
