--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@
                     </h3>
                 </div>
             </div>
+        </div>
         <div class="row">
             <div class="col-md-6" id="line">
                 <h1>line</h1>
