added def of living wage

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
                     <h3>A minimum wage is the lowest remuneration that employers can legally pay their employees. Minimum wage legislation emerged at the end of 
                         the nineteenth century from the desire to end sweated labor (sweatshops) which had developed in the wake of industrialization. In the United States, 
                         different states are able to set their own minimum wages independent of the federal government. When the state and federal minimum wage differ the higher wage prevails.
+                        As of 2021, minimum wage rates exceeded the federal rate in 29 of the 50 states. 
                     </h3>
                 </div>
             </div>
@@ -56,7 +57,11 @@
             <div class="col-md-6">
                 <h1>Living Wage</h1>
                 <div class="row">
-                    <h3></h3>
+                    <h3>A living wage is defined as the minimum income necessary for a worker to meet their basic needs. The goal of a living wage is to allow a worker to afford a basic but 
+                        decent standard of living through employment without government subsidies. Due to the flexible nature of the term "needs", there is not one universally accepted measure 
+                        of what a living wage is and as such it varies by location and household type. The living wage differs from the minimum wage in that the latter can fail to meet the requirements 
+                        for a basic quality of life which leaves the worker to rely on government programs for additional income. The living wage is similar to the minimum wage as it is a price floor 
+                        for labor. It thus differs from the national minimum wage in that it is not set according to a legal threshold.</h3>
                 </div>
             </div>
             <div class="col-md-6" id="hex">
