--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,19 @@
             <div class="col-sm-12" id="summary">
                 <h1>Minimum Wage</h1>
                 <div class="row">
+                    <h3> As of 2021, the federal minimum wage rate in the United States is $7.25 per hour. Individual states, cities, and localities may pass different minimum wage requirements.
+                        This means that it is illegal for an American worker to sell their labor for less than $7.25 per hour unless the worker falls into a category specifically exempted from 
+                        the Fair Labor Standards Act (FLSA).The government periodically assesses the federal minimum wage level for changes in inflation or cost of living. The federal minimum wage
+                        has not increased since July 2009.States will usually set a minimum wage that is reflective of the cost of living in the region. For example, the state of Massachusetts has 
+                        a minimum wage of $13.50 per hour, while Montana has a minimum wage rate of $8.75.
+                    </h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12" id="summary">
+                <h1>Federal Minimum Wage</h1>
+                <div class="row">
                     <h3>A minimum wage is the lowest remuneration that employers can legally pay their employees. Minimum wage legislation emerged at the end of 
                         the nineteenth century from the desire to end sweated labor (sweatshops) which had developed in the wake of industrialization. In the United States, 
                         different states are able to set their own minimum wages independent of the federal government. When the state and federal minimum wage differ the higher wage prevails.
@@ -54,7 +67,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" id="livingwage">
                 <h1>Living Wage</h1>
                 <div class="row">
                     <h3>A living wage is defined as the minimum income necessary for a worker to meet their basic needs. The goal of a living wage is to allow a worker to afford a basic but 
