--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12" id="summary">
+            <div class="col-sm-12" id="fedminwage">
                 <h1>Federal Minimum Wage</h1>
                 <div class="row">
                     <h3>A minimum wage is the lowest remuneration that employers can legally pay their employees. Minimum wage legislation emerged at the end of 
