--- a/static/styles.css
+++ b/static/styles.css
@@ -103,16 +103,16 @@ body {
 
   #summary {
     text-align: center;
-    font-size: small;
+    font-size: 30px;
   }
 
   #fedminwage {
     text-align: center;
-    font-size: small;
+    font-size: 30px;
   }
 
   #livingwage {
-    font-size: small;
+    font-size: 30px;
   }
   
   @media(max-width: 992px) {
