--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-sm-12" id="summary" style="font-size: 30px;">
+            <div class="col-sm-12" id="summary">
                 <h1>Minimum Wage</h1>
                 <div class="row">
                     <h3> As of 2021, the federal minimum wage rate in the United States is $7.25 per hour. Individual states, cities, and localities may pass different minimum wage requirements.
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12" id="fedminwage" style="font-size: 30px;">
+            <div class="col-sm-12" id="fedminwage">
                 <h1>Federal Minimum Wage</h1>
                 <div class="row">
                     <h3>A minimum wage is the lowest remuneration that employers can legally pay their employees. Minimum wage legislation emerged at the end of 
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6" id="livingwage" style="font-size: 30px;">
+            <div class="col-md-6" id="livingwage">
                 <h1>Living Wage</h1>
                 <div class="row">
                     <h3>A living wage is defined as the minimum income necessary for a worker to meet their basic needs. The goal of a living wage is to allow a worker to afford a basic but 
