changed url to living wage

--- a/templates/data.html
+++ b/templates/data.html
@@ -40,7 +40,7 @@
             <h3>The following link and table includes all of the data used for plotting during this project.</h3>
         </div>
         <div class="row">
-            <a href="https://livingwage.mit.edu/states/01/locations">Visit Living Wage Data</a>
+            <a href="https://livingwage.mit.edu">Visit Living Wage Data</a>
         </div>
         <div class="col-sm-12 table-responsive">
             <table border="1" class="dataframe">
