changed font size of def

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,8 @@
                         decent standard of living through employment without government subsidies. Due to the flexible nature of the term "needs", there is not one universally accepted measure 
                         of what a living wage is and as such it varies by location and household type. The living wage differs from the minimum wage in that the latter can fail to meet the requirements 
                         for a basic quality of life which leaves the worker to rely on government programs for additional income. The living wage is similar to the minimum wage as it is a price floor 
-                        for labor. It thus differs from the national minimum wage in that it is not set according to a legal threshold.</h3>
+                        for labor. It thus differs from the national minimum wage in that it is not set according to a legal threshold.
+                    </h3>
                 </div>
             </div>
             <div class="col-md-6" id="hex">
