--- a/static/styles.css
+++ b/static/styles.css
@@ -114,6 +114,10 @@ body {
   #livingwage {
     font-size: 15px;
   }
+
+  h3 {
+    font-size: 20px;
+  }
   
   @media(max-width: 992px) {
     .navbar-expand-lg {
