--- a/templates/index.html
+++ b/templates/index.html
@@ -83,8 +83,29 @@
                     </h3>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-xs-12 col-lg-4 searchContainer">
+                  <div class="category">
+                    <label for="familysize" class="col-form-label">
+                      CHOOSE FAMILY SIZE
+                    </label>
+                    <select class="form-control" id="familysize">
+                        <option value="OneAdultZeroKids" selected>One Adult Zero Kids</option>
+                        <option value="OneAdultOneKid">One Adult One Kid</option>
+                        <option value="OneAdultTwoKids">One Adult Two Kids</option>
+                        <option value="OneAdultThreeKids">One Adult Three Kids</option>
+                        <option value="TwoAdultsZeroKids">Two Adults Zero Kids</option>
+                        <option value="TwoAdultsOneKid">Two Adults One Kid</option>
+                        <option value="TwoAdultsTwoKids">Two Adults Two Kids</option>
+                        <option value="TwoAdultsThreeKids">Two Adults Three Kids</option>
+                    </select>
+                  </div>
+                </div>
+            </div>
             <div class="col-md-6" id="hex">
-                <h1>hex</h1>
+                <body>
+                <script defer type="text/javascript" src="choropleth.js"></script>
+                </body>
             </div>
         </div>
     </div>
