--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.4.1/dist/chart.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="//d3js.org/topojson.v1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
     <title>Minimum Wage</title>
 </head>
