--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,9 @@
         <div class="row">
             <div class="col-md-6" id="line">
                 <h1>line</h1>
+                <select id="selState">
+                    <option></option>
+                </select>
                 <script src="/static/chart.js"></script>
             </div>
             <div class="col-md-6" id="bubble">
