--- a/templates/overview.html
+++ b/templates/overview.html
@@ -32,5 +32,11 @@
             </div>
         </nav>
     </div>
+    <div class="container">
+        <div class="row">
+            <h1>Can People Live Off of Minimum Wage?</h1>
+            <h2 class="fw-bold">Goal:</h2> <h3>Visualize minimum wage and federal wage by state and year to see how it compares to the living wage. Ultimately taking a look at if minimum is liveable and/or show how it’s not.</h3>
+        </div>
+    </div>
 </body>
 </html>
