bolded h2 and fixed rows

--- a/templates/overview.html
+++ b/templates/overview.html
@@ -35,7 +35,9 @@
     <div class="container">
         <div class="row">
             <h1>Can People Live Off of Minimum Wage?</h1>
-            <h2 class="fw-bold">Goal:</h2> <h3>Visualize minimum wage and federal wage by state and year to see how it compares to the living wage. Ultimately taking a look at if minimum is liveable and/or show how it’s not.</h3>
+        </div>
+        <div class="row">
+            <h2>Goal:</h2> <h3>Visualize minimum wage and federal wage by state and year to see how it compares to the living wage. Ultimately taking a look at if the minimum wage is a liveable wage and/or show how it’s not.</h3>
         </div>
     </div>
 </body>
