--- a/static/styles.css
+++ b/static/styles.css
@@ -122,6 +122,10 @@ body {
   h3 {
     font-size: 20px;
   }
+
+  .list-group-item {
+    list-style-type: decimal;
+  }
   
   @media(max-width: 992px) {
     .navbar-expand-lg {
