--- a/templates/overview.html
+++ b/templates/overview.html
@@ -33,11 +33,21 @@
         </nav>
     </div>
     <div class="container">
-        <div class="row">
+        <div class="row border">
             <h1>Can People Live Off of Minimum Wage?</h1>
         </div>
         <div class="row">
-            <h2>Goal:</h2> <h3>Visualize minimum wage and federal wage by state and year to see how it compares to the living wage. Ultimately taking a look at if the minimum wage is a liveable wage and/or show how it’s not.</h3>
+            <h2>Goal:</h2> 
+            <h3>Visualize minimum wage and federal wage by state and year to see how it compares to the living wage. Ultimately taking a look at if the minimum wage is a liveable wage and/or show how it’s not.</h3>
+        </div>
+        <div class="row">
+            <h2>Libraries/Databses used in this Project:</h2> 
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">D3.js</li>
+                <li class="list-group-item">Plotly</li>
+                <li class="list-group-item">Chart.js</li>
+                <li class="list-group-item">SQL</li>
+            </ul>
         </div>
     </div>
 </body>
