--- a/templates/overview.html
+++ b/templates/overview.html
@@ -42,7 +42,7 @@
         </div>
         <div class="row">
             <h2>Libraries/Databses used in this Project:</h2> 
-            <ul class="list-group list-group-flush">
+            <ul class="list-group">
                 <li class="list-group-item">D3.js</li>
                 <li class="list-group-item">Plotly</li>
                 <li class="list-group-item">Chart.js</li>
