--- a/templates/overview.html
+++ b/templates/overview.html
@@ -42,10 +42,12 @@
         </div>
         <div class="row">
             <h2>Libraries/Databses used in this Project:</h2> 
-            <li class="list-group-item">D3.js</li>
-            <li class="list-group-item">Plotly</li>
-            <li class="list-group-item">Chart.js</li>
-            <li class="list-group-item">SQL</li>
+            <ul style="list-style-type: circle;">
+                <li>D3.js</li>
+                <li>Plotly</li>
+                <li>Chart.js</li>
+                <li>SQL</li>
+            </ul>
         </div>
     </div>
 </body>
