moved list element

--- a/templates/overview.html
+++ b/templates/overview.html
@@ -42,7 +42,9 @@
         </div>
         <div class="row">
             <h2>Libraries/Databses used in this Project:</h2> 
-            <ul style="list-style-type: circle;">
+        </div>
+        <div class="row">
+            <ul style="list-style-type: circle;" style="font-size: 20px;">
                 <li>D3.js</li>
                 <li>Plotly</li>
                 <li>Chart.js</li>
