--- a/templates/overview.html
+++ b/templates/overview.html
@@ -55,7 +55,7 @@
             <h2>Datasets used for Analysis:</h2>
         </div>
         <div class="row">
-            <ul style="list-style-type: circle;" style="font-size: 20px;">
+            <ul style="list-style-type: circle;" style="font-size: 20px;" style="color: blue;">
                 <li>
                     <a href="https://www.kaggle.com/lislejoem/us-minimum-wage-by-state-from-1968-to-2017/data">Kaggle</a>
                 </li>
