--- a/templates/overview.html
+++ b/templates/overview.html
@@ -49,13 +49,16 @@
                 <li>Plotly</li>
                 <li>Chart.js</li>
                 <li>SQL</li>
+                <li>Pandas</li>
+                <li>Bootstrap</li>
+                <li>Heroku</li>
             </ul>
         </div>
         <div class="row">
             <h2>Datasets used for Analysis:</h2>
         </div>
         <div class="row">
-            <ul style="list-style-type: circle;" style="font-size: 20px;" style="color: blue;">
+            <ul style="list-style-type: circle;" style="font-size: 20px;" id="links">
                 <li>
                     <a href="https://www.kaggle.com/lislejoem/us-minimum-wage-by-state-from-1968-to-2017/data">Kaggle</a>
                 </li>
