--- a/templates/overview.html
+++ b/templates/overview.html
@@ -44,7 +44,7 @@
             <h2>Libraries/Databses used in this Project:</h2> 
         </div>
         <div class="row">
-            <ul style="list-style-type: circle;" style="font-size: 20px;">
+            <ul style="list-style-type: circle;" style="font-size: 20px;" id="libraries">
                 <li>D3.js</li>
                 <li>Plotly</li>
                 <li>Chart.js</li>
