--- a/templates/overview.html
+++ b/templates/overview.html
@@ -38,7 +38,9 @@
         </div>
         <div class="row">
             <h2>Goal:</h2> 
-            <h3>Visualize minimum wage and federal wage by state and year to see how it compares to the living wage. Ultimately taking a look at if the minimum wage is a liveable wage and/or show how it’s not.</h3>
+            <h3>Visualize minimum wage and federal wage by state and year to see how it compares to the living wage. Ultimately, we are taking a look at minimum wage and if it is a liveable wage and/or show how it’s not.
+                Some people have to provide for more than just themselves so we also wanted to take a look at what a livable wage is for a few different family types. 
+            </h3>
         </div>
         <div class="row">
             <h2>Libraries/Databses used in this Project:</h2> 
