created grdi layout for team photos and git hub links

--- a/templates/about.html
+++ b/templates/about.html
@@ -32,5 +32,21 @@
             </div>
         </nav>
     </div>
+    <div class="container">
+        <div class="row row-cols-4">
+            <div class="col">
+                <img src="..." class="rounded mx-auto d-block" alt="Moriah Taylor">
+            </div>
+            <div class="col">
+                <img src="..." class="rounded mx-auto d-block" alt="Nicole Pierre">
+            </div>
+            <div class="col">
+                <img src="..." class="rounded mx-auto d-block" alt="Lauren McCarthy">
+            </div>
+            <div class="col">
+                <img src="..." class="rounded mx-auto d-block" alt="Shalyn Lavoie">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
