added space for picture and links to github and linkedin

--- a/templates/about.html
+++ b/templates/about.html
@@ -36,15 +36,23 @@
         <div class="row row-cols-4">
             <div class="col">
                 <img src="..." class="rounded mx-auto d-block" alt="Moriah Taylor">
+                <a href="https://github.com/moriahtaylor1">GitHub</a>
+                <a href="">LinkedIn</a>
             </div>
             <div class="col">
                 <img src="..." class="rounded mx-auto d-block" alt="Nicole Pierre">
+                <a href="https://github.com/nicpie-bit">GitHub</a>
+                <a href="https://www.linkedin.com/in/nicolebroussard8469">LinkedIn</a>
             </div>
             <div class="col">
                 <img src="..." class="rounded mx-auto d-block" alt="Lauren McCarthy">
+                <a href="https://github.com/lamccart15">GitHub</a>
+                <a href="">LinkedIn</a>
             </div>
             <div class="col">
                 <img src="..." class="rounded mx-auto d-block" alt="Shalyn Lavoie">
+                <a href="https://github.com/shalynalavoie">GitHub</a>
+                <a href="">LinkedIn</a>
             </div>
         </div>
     </div>
