--- a/templates/about.html
+++ b/templates/about.html
@@ -34,24 +34,28 @@
     </div>
     <div class="container">
         <div class="row row-cols-4">
-            <div class="col">
+            <div class="col" style="border-color: black;">
                 <img src="..." class="rounded mx-auto d-block" alt="Moriah Taylor">
                 <a href="https://github.com/moriahtaylor1">GitHub</a>
+                <h3>|</h3>
                 <a href="">LinkedIn</a>
             </div>
-            <div class="col">
+            <div class="col" style="border-color: black;">
                 <img src="..." class="rounded mx-auto d-block" alt="Nicole Pierre">
                 <a href="https://github.com/nicpie-bit">GitHub</a>
+                <h3>|</h3>
                 <a href="https://www.linkedin.com/in/nicolebroussard8469">LinkedIn</a>
             </div>
-            <div class="col">
+            <div class="col" style="border-color: black;">
                 <img src="..." class="rounded mx-auto d-block" alt="Lauren McCarthy">
                 <a href="https://github.com/lamccart15">GitHub</a>
+                <h3>|</h3>
                 <a href="">LinkedIn</a>
             </div>
-            <div class="col">
+            <div class="col" style="border-color: black;">
                 <img src="..." class="rounded mx-auto d-block" alt="Shalyn Lavoie">
                 <a href="https://github.com/shalynalavoie">GitHub</a>
+                <h3>|</h3>
                 <a href="">LinkedIn</a>
             </div>
         </div>
