--- a/templates/about.html
+++ b/templates/about.html
@@ -33,7 +33,7 @@
         </nav>
     </div>
     <div class="container">
-        <div class="row row-cols-4">
+        <div class="row row-cols-4 border">
             <div class="col border" style="border-color: black;">
                 <img src="..." class="rounded mx-auto d-block" alt="Moriah Taylor">
                 <a href="https://github.com/moriahtaylor1">GitHub</a>
