--- a/templates/about.html
+++ b/templates/about.html
@@ -51,7 +51,7 @@
             <div class="col border" style="border-color: black;">
                 <img src="..." class="rounded mx-auto d-block" alt="Lauren McCarthy">
                 <a href="https://github.com/lamccart15">GitHub</a>
-                <div class="row"
+                <div class="row">
                     <a href="">LinkedIn</a>
                 </div>
             </div>
