--- a/templates/about.html
+++ b/templates/about.html
@@ -34,28 +34,28 @@
     </div>
     <div class="container">
         <div class="row row-cols-4 border">
-            <div class="col border" style="border-color: black;">
+            <div class="col border">
                 <img src="..." class="rounded mx-auto d-block" alt="Moriah Taylor">
                 <a href="https://github.com/moriahtaylor1">GitHub</a>
                 <div class="row">
                     <a href="">LinkedIn</a>
                 </div>
             </div>
-            <div class="col border" style="border-color: black;">
+            <div class="col border">
                 <img src="..." class="rounded mx-auto d-block" alt="Nicole Pierre">
                 <a href="https://github.com/nicpie-bit">GitHub</a>
                 <div class="row">
                     <a href="https://www.linkedin.com/in/nicolebroussard8469">LinkedIn</a>
                 </div>
             </div>
-            <div class="col border" style="border-color: black;">
+            <div class="col border">
                 <img src="..." class="rounded mx-auto d-block" alt="Lauren McCarthy">
                 <a href="https://github.com/lamccart15">GitHub</a>
                 <div class="row">
                     <a href="">LinkedIn</a>
                 </div>
             </div>
-            <div class="col border" style="border-color: black;">
+            <div class="col border">
                 <img src="..." class="rounded mx-auto d-block" alt="Shalyn Lavoie">
                 <a href="https://github.com/shalynalavoie">GitHub</a>
                 <div class="row">
