--- a/templates/about.html
+++ b/templates/about.html
@@ -32,8 +32,8 @@
             </div>
         </nav>
     </div>
-    <div class="grid-container" style="column-gap: 50px;">
-        <div class="row row-cols-4 border">
+    <div class="grid-container">
+        <div class="row row-cols-4 border" style="column-gap: 50px;">
             <div class="col border">
                 <img src="..." class="rounded mx-auto d-block" alt="Moriah Taylor">
                 <a href="https://github.com/moriahtaylor1">GitHub</a>
