--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
         <div class="row">
             <div class="col-md-6" id="line">
                 <h1>line</h1>
-                <select id="selState">
+                <select id="selState" onchange="stateChange(this.value)">
                     <option></option>
                 </select>
                 <script src="/static/chart.js"></script>
