--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,9 @@
             </div>
             <div class="col-md-6" id="bubble">
                 <h1>bubble</h1>
+                <div>
+                    <canvas id="myBarChart" width="400" height="400"></canvas>
+                </div>
                 <script src="/static/bubblechart.js"></script>
             </div>
         </div>
