--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
         <div class="row">
             <div class="col-md-6" id="line">
                 <h1>line</h1>
-                <select id="selState" onchange="stateChange(this.value)">
+                <select id="selState">
                     <option></option>
                 </select>
                 <script src="/static/chart.js"></script>
@@ -111,7 +111,7 @@
             </div>
             <div class="col-md-6" id="hex">
                 <body>
-                <script defer type="text/javascript" src="choropleth.js"></script>
+                <script defer type="text/javascript" src="/static/choropleth.js"></script>
                 </body>
             </div>
         </div>
