--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-lg-4 searchContainer">
+                <div class="col-xs-12 col-lg-4 searchContainer" id="scale">
                   <div class="category">
                     <label for="familysize" class="col-form-label">
                       CHOOSE FAMILY SIZE
