updating bar code

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,10 @@
                 <script src="/static/chart.js"></script>
             </div>
             <div class="col-md-6" id="bubble">
-                <h1>bubble</h1>
+                <select id="selYear">
+                    <option></option>
+                </select>
+                <div id="bubble"></div>
                 <div>
                     <canvas id="myBarChart" width="400" height="400"></canvas>
                 </div>
