updating files and changing format

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,14 +70,11 @@
                 <div id="line"></div>
                 <script src="/static/chart.js"></script>
             </div>
-            <div class="col-md-6" id="bubble">
+            <div class="col-md-6">
                 <select id="selYear">
                     <option></option>
                 </select>
-                <div id="bubble"></div>
-                <div>
-                    <canvas id="myBarChart" width="400" height="400"></canvas>
-                </div>
+                <div id="bar"></div>
                 <script src="/static/bubblechart.js"></script>
             </div>
         </div>
