--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.4.1/dist/chart.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="//d3js.org/topojson.v1.min.js"></script>
+    <link rel="stylesheet" href="/static/bootstrap.min-2.css">
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
     <title>Minimum Wage</title>
 </head>
