chnaged class of table

--- a/templates/data.html
+++ b/templates/data.html
@@ -46,7 +46,7 @@
             <a href="https://livingwage.mit.edu">Visit Living Wage Data</a>
         </div>
         <div class="col-sm-12 table-responsive">
-            <table border="1" class="dataframe">
+            <table border="1" class="table table-hover">
   <thead>
     <tr style="text-align: right;">
       <th></th>
