testing out vocab formatting

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,20 @@
             </div>
         </nav>
     </div>
-    <div class="container">
+    <div class="container">   
         <div class="row">
+            <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+                <div class="card-header"></div>
+                <div class="card-body">
+                    <h4 class="card-title">Minimum Wage</h4>
+                    <p class="card-text">As of 2021, the federal minimum wage rate in the United States is $7.25 per hour. Individual states, cities, and localities may pass different minimum wage requirements.
+                        This means that it is illegal for an American worker to sell their labor for less than $7.25 per hour unless the worker falls into a category specifically exempted from 
+                        the Fair Labor Standards Act (FLSA).The government periodically assesses the federal minimum wage level for changes in inflation or cost of living. The federal minimum wage
+                        has not increased since July 2009.States will usually set a minimum wage that is reflective of the cost of living in the region. For example, the state of Massachusetts has 
+                        a minimum wage of $13.50 per hour, while Montana has a minimum wage rate of $8.75.
+                    </p>
+                </div>
+            </div>
             <div class="col-sm-12" id="summary">
                 <h1>Minimum Wage</h1>
                 <div class="row">
