--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
         </nav>
     </div>
     <div class="container">   
-        <div class="row">
+        <div class="row" style="margin-right: 20px;">
             <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
                 <div class="card-body">
                     <h4 class="card-title">Minimum Wage</h4>
