fix last spacing

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
     <div class="container">   
         <div class="row" style="margin-top: 20px;">
             <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
-                <div class="card-body" style="margin-right: 20rem;">
+                <div class="card-body" style="margin-right: 20px;">
                     <h4 class="card-title">Minimum Wage</h4>
                     <p class="card-text">As of 2021, the federal minimum wage rate in the United States is $7.25 per hour. Individual states, cities, and localities may pass different minimum wage requirements.
                         This means that it is illegal for an American worker to sell their labor for less than $7.25 per hour unless the worker falls into a category specifically exempted from 
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
-                <div class="card-body" style="margin-left: 20rem;">
+                <div class="card-body" style="margin-left: 20px;">
                     <h4 class="card-title">Living Wage</h4>
                     <p class="card-text">A living wage is defined as the minimum income necessary for a worker to meet their basic needs. The goal of a living wage is to allow a worker to afford a basic but 
                             decent standard of living through employment without government subsidies. Due to the flexible nature of the term "needs", there is not one universally accepted measure 
