--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="container">   
         <div class="row" style="margin-top: 20px;">
-            <div class="card text-white bg-dark mb-3" style="max-width: 20rem;" style="margin-right: 30px;">
+            <div class="card text-white bg-dark mb-3" style="max-width: 20rem; margin-right: 30px;">
                 <div class="card-body">
                     <h4 class="card-title">Minimum Wage</h4>
                     <p class="card-text">As of 2021, the federal minimum wage rate in the United States is $7.25 per hour. Individual states, cities, and localities may pass different minimum wage requirements.
@@ -52,7 +52,7 @@
                     </p>
                 </div>
             </div>
-            <div class="card text-white bg-info mb-3" style="max-width: 20rem;" style="margin-right: 30px;">
+            <div class="card text-white bg-info mb-3" style="max-width: 20rem; margin-right: 30px;">
                 <div class="card-body">
                     <h4 class="card-title">Federal Minimum Wage</h4>
                     <p class="card-text">A minimum wage is the lowest remuneration that employers can legally pay their employees. Minimum wage legislation emerged at the end of 
