--- a/templates/index.html
+++ b/templates/index.html
@@ -93,8 +93,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-lg-4 searchContainer" id="scale">
-                <div class="category">
+            <div class="col-xs-12 col-lg-4 searchContainer">
+                <div class="category" id="scale">
                     <label for="familysize" class="col-form-label">
                       CHOOSE FAMILY SIZE
                     </label>
