fixing hex html layout

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-lg-4 searchContainer">
+            <div class="col-xs-12 col-lg-4 searchContainer" id="hex">
+                <body>
+                    <script defer type="text/javascript" src="/static/choropleth.js"></script>
+                </body>
                 <div class="category" id="scale">
                     <label for="familysize" class="col-form-label">
                       CHOOSE FAMILY SIZE
@@ -108,11 +111,6 @@
                         <option value="TwoAdultsTwoKids">Two Adults Two Kids</option>
                         <option value="TwoAdultsThreeKids">Two Adults Three Kids</option>
                     </select>
-                </div>
-                <div class="col-md-12" id="hex">
-                    <body>
-                        <script defer type="text/javascript" src="/static/choropleth.js"></script>
-                    </body>
                 </div>
             </div>
         </div>
