fix hex scale layout

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
                 <body>
                     <script defer type="text/javascript" src="/static/choropleth.js"></script>
                 </body>
-                <div class="category" id="scale">
+                <div class="category">
                     <label for="familysize" class="col-form-label">
                       CHOOSE FAMILY SIZE
                     </label>
@@ -112,6 +112,7 @@
                         <option value="TwoAdultsThreeKids">Two Adults Three Kids</option>
                     </select>
                 </div>
+                <div class="scale" id="sclae"></div>
             </div>
         </div>
     </div>
