fix spelling error

--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
                         <option value="TwoAdultsThreeKids">Two Adults Three Kids</option>
                     </select>
                 </div>
-                <div class="scale" id="sclae"></div>
+                <div class="scale" id="scale"></div>
             </div>
         </div>
     </div>
