fixed hex map container

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-lg-4 searchContainer" id="hex">
+            <div class="col-xs-12 col-lg-4 searchContainer" id="scale">
                 <body>
                     <script defer type="text/javascript" src="/static/choropleth.js"></script>
                 </body>
@@ -112,8 +112,8 @@
                         <option value="TwoAdultsThreeKids">Two Adults Three Kids</option>
                     </select>
                 </div>
-                <div class="scale" id="scale"></div>
             </div>
+            <div class="col-md-12" id="hex"></div>
         </div>
     </div>
 </body>
