--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-lg-4 searchContainer" id="scale">
+            <div class="col-xs-12 col-lg-4 searchContainer">
                 <body>
                     <script defer type="text/javascript" src="/static/choropleth.js"></script>
                 </body>
@@ -113,7 +113,9 @@
                     </select>
                 </div>
             </div>
-            <div class="col-md-12" id="hex"></div>
+            <div class="col-md-12" id="hex">
+                <div class="scale" id="scale"></div>
+            </div>
         </div>
     </div>
 </body>
