--- a/templates/about.html
+++ b/templates/about.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
     </div>
-    <div class="grid-container">
+    <div class="row">
         <div class="card mb-3">
             <h3 class="card-header">Moriah Taylor</h3>
             <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
