--- a/templates/about.html
+++ b/templates/about.html
@@ -35,61 +35,63 @@
             </div>
         </nav>
     </div>
-    <div class="row">
-        <div class="card mb-3">
-            <h3 class="card-header">Moriah Taylor</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                <rect width="100%" height="100%" fill="#868e96"></rect>
-                <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Moriah Taylor</text>
-            </svg>
-            <div class="card-body">
-                <p class="card-text">Data Scientist</p>
+    <div class="container"
+        <div class="row row-cols-2">
+            <div class="card mb-3">
+                <h3 class="card-header">Moriah Taylor</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                    <rect width="100%" height="100%" fill="#868e96"></rect>
+                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Moriah Taylor</text>
+                </svg>
+                <div class="card-body">
+                    <p class="card-text">Data Scientist</p>
+                </div>
+                <div class="card-body">
+                    <a href="https://github.com/moriahtaylor1" class="card-link">GitHub</a>
+                    <a href="#" class="card-link">LinkedIn</a>
+                </div>
             </div>
-            <div class="card-body">
-                <a href="https://github.com/moriahtaylor1" class="card-link">GitHub</a>
-                <a href="#" class="card-link">LinkedIn</a>
+            <div class="card mb-3">
+                <h3 class="card-header">Nicole Pierre</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                    <rect width="100%" height="100%" fill="#868e96"></rect>
+                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Nicole Pierre</text>
+                </svg>
+                <div class="card-body">
+                    <p class="card-text">Data Scientist & Web Designer</p>
+                </div>
+                <div class="card-body">
+                    <a href="https://github.com/nicpie-bit" class="card-link">GitHub</a>
+                    <a href="https://www.linkedin.com/in/nicolebroussard8469" class="card-link">LinkedIn</a>
+                </div>
             </div>
-        </div>
-        <div class="card mb-3">
-            <h3 class="card-header">Nicole Pierre</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                <rect width="100%" height="100%" fill="#868e96"></rect>
-                <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Nicole Pierre</text>
-            </svg>
-            <div class="card-body">
-                <p class="card-text">Data Scientist & Web Designer</p>
+            <div class="card mb-3">
+                <h3 class="card-header">Lauren McCarthy</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                    <rect width="100%" height="100%" fill="#868e96"></rect>
+                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Lauren McCarthy</text>
+                </svg>
+                <div class="card-body">
+                    <p class="card-text">Data Scientist</p>
+                </div>
+                <div class="card-body">
+                    <a href="https://github.com/lamccart15" class="card-link">GitHub</a>
+                    <a href="#" class="card-link">LinkedIn</a>
+                </div>
             </div>
-            <div class="card-body">
-                <a href="https://github.com/nicpie-bit" class="card-link">GitHub</a>
-                <a href="https://www.linkedin.com/in/nicolebroussard8469" class="card-link">LinkedIn</a>
-            </div>
-        </div>
-        <div class="card mb-3">
-            <h3 class="card-header">Lauren McCarthy</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                <rect width="100%" height="100%" fill="#868e96"></rect>
-                <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Lauren McCarthy</text>
-            </svg>
-            <div class="card-body">
-                <p class="card-text">Data Scientist</p>
-            </div>
-            <div class="card-body">
-                <a href="https://github.com/lamccart15" class="card-link">GitHub</a>
-                <a href="#" class="card-link">LinkedIn</a>
-            </div>
-        </div>
-        <div class="card mb-3">
-            <h3 class="card-header">Shalyn Lavoie</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                <rect width="100%" height="100%" fill="#868e96"></rect>
-                <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Shalyn Lavoie</text>
-            </svg>
-            <div class="card-body">
-                <p class="card-text">Data Scientist</p>
-            </div>
-            <div class="card-body">
-                <a href="https://github.com/shalynalavoie" class="card-link">GitHub</a>
-                <a href="#" class="card-link">LinkedIn</a>
+            <div class="card mb-3">
+                <h3 class="card-header">Shalyn Lavoie</h3>
+                <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                    <rect width="100%" height="100%" fill="#868e96"></rect>
+                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Shalyn Lavoie</text>
+                </svg>
+                <div class="card-body">
+                    <p class="card-text">Data Scientist</p>
+                </div>
+                <div class="card-body">
+                    <a href="https://github.com/shalynalavoie" class="card-link">GitHub</a>
+                    <a href="#" class="card-link">LinkedIn</a>
+                </div>
             </div>
         </div>
     </div>
