changed background color of about and grid layout

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/bootstrap.min-2.css">
     <title>Minimum Wage</title>
 </head>
-<body>
+<body style="baackground-color: #FFF5FD;">
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
@@ -36,7 +36,7 @@
         </nav>
     </div>
     <div class="container"
-        <div class="row row-cols-2">
+        <div class="row row-cols-auto" style="margin-top: 20px;">
             <div class="card mb-3 col-md-3">
                 <h3 class="card-header">Moriah Taylor</h3>
                 <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
