--- a/templates/about.html
+++ b/templates/about.html
@@ -54,8 +54,7 @@
             <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                 <h3 class="card-header">Nicole Pierre</h3>
                 <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                    <rect width="100%" height="100%" fill="#868e96"></rect>
-                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Nicole Pierre</text>
+                    <img src="/images/Nicole_Pierre.jpg" class="profile-pic" alt="Nicole Pierre">
                 </svg>
                 <div class="card-body">
                     <p class="card-text">Data Scientist & Web Designer</p>
